# codex-usage-tracker

./: .bandit  .gitignore  .gitleaks.toml  .markdownlint-cli2.yaml  .mcp.json  AGENTS.agent-maintainer.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  dependency-cruiser.config.cjs  justfile  knip.json  package-lock.json  package.json  playwright.config.mjs  pyproject.toml  stylelint.config.mjs  tach.toml  zizmor.yml
.agent-maintainer/: dashboard-source-baseline.json  file-length-baseline.json  git-agent-ratchet-duplicate-helpers.json  git-agent-ratchet-max-file-lines.json  git-agent-ratchet-private-imports.json  ratchet-baseline.json
.codex/: tasks.toml
.codex-plugin/: plugin.json
.github/: dependabot.yml  pull_request_template.md
.serena/: project.yml
config/: bandit-baseline.json  dashboard-route-budgets.json  product-complexity-budget.json  vulture-whitelist.py
docs/: adoption-hardening-roadmap.md  agent-maintainer-guidance.md  agent-maintainer-hardening-branch-roadmap.md  agentic-briefing-and-dogfood-roadmap.md  agentic-investigation-hardening-roadmap.md  agentic-mcp-skill-roadmap.md  allowance-intelligence.md  architecture-boundary-map.md  architecture.md  call-drilldown-performance-checklist.md  cli-json-schemas.md  cli-reference.md  complexity-hardening-roadmap.md  compression-lab-roadmap.md  contracts.md  dashboard-final-redesign-audit.md  dashboard-final-redesign-parity.md  dashboard-final-redesign-release-candidate.md  dashboard-final-redesign-roadmap.md  dashboard-final-redesign-spec.md  data-posture.md  (+27 more)
(+1736 files in other folders)
